--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
   "devDependencies": {
     "@types/jquery": "^3.5.14",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
